ffi/poc/cpp/corpus/nounk/include/ak_abi.h

/* ABI v1 section 4: source code units -> UTF-8 into dst; returns bytes written or an error. */
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
/* ABI v1 section 4, encode: a blob as DATA in the group. `len` counts SOURCE code units; `tc == NULL` means the field is ABSENT. */
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
/* ABI v1 section 4, decode: an OFFSET into the buffer the host handed in. */
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
/* Encode group for `Timestamp`. */
struct ak_efix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Decode group for `Timestamp`. */
struct ak_dfix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Encode group for `UploadResultData`. */
struct ak_efix_UploadResultData {
  struct ak_str session_id;
  struct ak_str result_id;
  struct ak_str data_chunk;
  uint32_t presence;
};
/* Decode group for `UploadResultData`. */
struct ak_dfix_UploadResultData {
  struct ak_span session_id;
  struct ak_span result_id;
  struct ak_span data_chunk;
  uint32_t presence;
};
/* Encode group for `Pair`. */
struct ak_efix_Pair {
  struct ak_str key;
  int32_t value;
  uint32_t presence;
};
/* Decode group for `Pair`. */
struct ak_dfix_Pair {
  struct ak_span key;
  int32_t value;
  uint32_t presence;
};
/* Encode group for `ListResultsResponse`. */
struct ak_efix_ListResultsResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Decode group for `ListResultsResponse`. */
struct ak_dfix_ListResultsResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Encode group for `ListTasksDetailedResponse`. */
struct ak_efix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Decode group for `ListTasksDetailedResponse`. */
struct ak_dfix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Encode group for `ListTaskSummaryResponse`. */
struct ak_efix_ListTaskSummaryResponse {
  uint32_t presence;
};
/* Decode group for `ListTaskSummaryResponse`. */
struct ak_dfix_ListTaskSummaryResponse {
  uint32_t presence;
};
/* Encode group for `ListProbeResponse`. */
struct ak_efix_ListProbeResponse {
  uint32_t presence;
};
/* Decode group for `ListProbeResponse`. */
struct ak_dfix_ListProbeResponse {
  uint32_t presence;
};
/* Encode group for `ListMetricsResponse`. */
struct ak_efix_ListMetricsResponse {
  uint32_t presence;
};
/* Decode group for `ListMetricsResponse`. */
struct ak_dfix_ListMetricsResponse {
  uint32_t presence;
};
/* Encode group for `UploadResultDataMessage`. */
struct ak_efix_UploadResultDataMessage {
  struct ak_efix_UploadResultData upload;
  uint32_t presence;
};
#define AK_EFIX_UPLOADRESULTDATAMESSAGE_PRESENT_UPLOAD (1u << 0)
/* Decode group for `UploadResultDataMessage`. */
struct ak_dfix_UploadResultDataMessage {
  struct ak_dfix_UploadResultData upload;
  uint32_t presence;
};
#define AK_DFIX_UPLOADRESULTDATAMESSAGE_PRESENT_UPLOAD (1u << 0)
/* Encode group for `DualResponse`. */
struct ak_efix_DualResponse {
  uint32_t presence;
};
/* Decode group for `DualResponse`. */
struct ak_dfix_DualResponse {
  uint32_t presence;
};
/* Encode group for `ChunkLeaf`. */
struct ak_efix_ChunkLeaf {
  struct ak_str k;
  int32_t v;
  uint32_t presence;
};
/* Decode group for `ChunkLeaf`. */
struct ak_dfix_ChunkLeaf {
  struct ak_span k;
  int32_t v;
  uint32_t presence;
};
/* Encode group for `ChunkInner`. */
struct ak_efix_ChunkInner {
  uint32_t presence;
};
/* Decode group for `ChunkInner`. */
struct ak_dfix_ChunkInner {
  uint32_t presence;
};
/* Encode group for `ChunkElement`. */
struct ak_efix_ChunkElement {
  struct ak_str id;
  struct ak_efix_ChunkInner inner;
  uint32_t presence;
};
#define AK_EFIX_CHUNKELEMENT_PRESENT_INNER (1u << 0)
/* Decode group for `ChunkElement`. */
struct ak_dfix_ChunkElement {
  struct ak_span id;
  struct ak_dfix_ChunkInner inner;
  uint32_t presence;
};
#define AK_DFIX_CHUNKELEMENT_PRESENT_INNER (1u << 0)
/* Encode group for `ChunkedResponse`. */
struct ak_efix_ChunkedResponse {
  int32_t page;
  uint32_t presence;
};
/* Decode group for `ChunkedResponse`. */
struct ak_dfix_ChunkedResponse {
  int32_t page;
  uint32_t presence;
};
/* Encode group for `ChunkedResponseWide`. */
struct ak_efix_ChunkedResponseWide {
  uint32_t presence;
};
/* Decode group for `ChunkedResponseWide`. */
struct ak_dfix_ChunkedResponseWide {
  uint32_t presence;
};
/* Encode group for `LeafElement`. */
struct ak_efix_LeafElement {
  struct ak_str id;
  int64_t n;
  struct ak_efix_Timestamp stamp;
  uint32_t presence;
};
#define AK_EFIX_LEAFELEMENT_PRESENT_STAMP (1u << 0)
/* Decode group for `LeafElement`. */
struct ak_dfix_LeafElement {
  struct ak_span id;
  int64_t n;
  struct ak_dfix_Timestamp stamp;
  uint32_t presence;
};
#define AK_DFIX_LEAFELEMENT_PRESENT_STAMP (1u << 0)
/* Encode group for `LeafResponse`. */
struct ak_efix_LeafResponse {
  uint32_t presence;
};
/* Decode group for `LeafResponse`. */
struct ak_dfix_LeafResponse {
  uint32_t presence;
};
/* Encode group for `SurrogateInner`. */
struct ak_efix_SurrogateInner {
  struct ak_str text;
  uint32_t presence;
};
/* Decode group for `SurrogateInner`. */
struct ak_dfix_SurrogateInner {
  struct ak_span text;
  uint32_t presence;
};
/* Encode group for `Surrogate`. */
struct ak_efix_Surrogate {
  struct ak_str text;
  struct ak_efix_SurrogateInner nested;
  struct ak_str raw;
  uint32_t presence;
};
#define AK_EFIX_SURROGATE_PRESENT_NESTED (1u << 0)
/* Decode group for `Surrogate`. */
struct ak_dfix_Surrogate {
  struct ak_span text;
  struct ak_dfix_SurrogateInner nested;
  struct ak_span raw;
  uint32_t presence;
};
#define AK_DFIX_SURROGATE_PRESENT_NESTED (1u << 0)
/* Encode group for `WireZoo`. */
struct ak_efix_WireZoo {
  int32_t v_int32;
  int64_t v_int64;
  uint8_t v_bool;
  double v_double;
  uint32_t v_fixed32;
  struct ak_str v_string;
  struct ak_str v_bytes;
  int32_t v_enum;
  struct ak_efix_Timestamp v_msg;
  int32_t v_big_tag;
  uint32_t presence;
};