ffi/poc/codec/crates/ak-abi/src/generated_corpus_nounk/abi.rs


/// Encode group for `Pair`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_Pair {
    pub key: ak_str,
    pub value: i32,
    pub presence: u32,
}
impl ak_efix_Pair {
    pub const ZERO: Self = ak_efix_Pair {
        key: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        value: 0,
        presence: 0,
    };
}

/// Decode group for `Pair`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_Pair {
    pub key: ak_span,
    pub value: i32,
    pub presence: u32,
}
impl ak_dfix_Pair {
    pub const ZERO: Self = ak_dfix_Pair {
        key: ak_span { off: 0, len: 0, coder: 0 },
        value: 0,
        presence: 0,
    };
}

/// Encode group for `ListResultsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ListResultsResponse {
    pub page: i32,
    pub total: i32,
    pub presence: u32,
}
impl ak_efix_ListResultsResponse {
    pub const ZERO: Self = ak_efix_ListResultsResponse {
        page: 0,
        total: 0,
        presence: 0,
    };
}

/// Decode group for `ListResultsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ListResultsResponse {
    pub page: i32,
    pub total: i32,
    pub presence: u32,
}
impl ak_dfix_ListResultsResponse {
    pub const ZERO: Self = ak_dfix_ListResultsResponse {
        page: 0,
        total: 0,
        presence: 0,
    };
}

/// Encode group for `ListTasksDetailedResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ListTasksDetailedResponse {
    pub page: i32,
    pub total: i32,
    pub presence: u32,
}
impl ak_efix_ListTasksDetailedResponse {
    pub const ZERO: Self = ak_efix_ListTasksDetailedResponse {
        page: 0,
        total: 0,
        presence: 0,
    };
}

/// Decode group for `ListTasksDetailedResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ListTasksDetailedResponse {
    pub page: i32,
    pub total: i32,
    pub presence: u32,
}
impl ak_dfix_ListTasksDetailedResponse {
    pub const ZERO: Self = ak_dfix_ListTasksDetailedResponse {
        page: 0,
        total: 0,
        presence: 0,
    };
}

/// Encode group for `ListTaskSummaryResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ListTaskSummaryResponse {
    pub presence: u32,
}
impl ak_efix_ListTaskSummaryResponse {
    pub const ZERO: Self = ak_efix_ListTaskSummaryResponse {
        presence: 0,
    };
}

/// Decode group for `ListTaskSummaryResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ListTaskSummaryResponse {
    pub presence: u32,
}
impl ak_dfix_ListTaskSummaryResponse {
    pub const ZERO: Self = ak_dfix_ListTaskSummaryResponse {
        presence: 0,
    };
}

/// Encode group for `ListProbeResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ListProbeResponse {
    pub presence: u32,
}
impl ak_efix_ListProbeResponse {
    pub const ZERO: Self = ak_efix_ListProbeResponse {
        presence: 0,
    };
}

/// Decode group for `ListProbeResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ListProbeResponse {
    pub presence: u32,
}
impl ak_dfix_ListProbeResponse {
    pub const ZERO: Self = ak_dfix_ListProbeResponse {
        presence: 0,
    };
}

/// Encode group for `ListMetricsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ListMetricsResponse {
    pub presence: u32,
}
impl ak_efix_ListMetricsResponse {
    pub const ZERO: Self = ak_efix_ListMetricsResponse {
        presence: 0,
    };
}

/// Decode group for `ListMetricsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ListMetricsResponse {
    pub presence: u32,
}
impl ak_dfix_ListMetricsResponse {
    pub const ZERO: Self = ak_dfix_ListMetricsResponse {
        presence: 0,
    };
}

/// Encode group for `UploadResultDataMessage`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_UploadResultDataMessage {
    pub upload: ak_efix_UploadResultData,
    pub presence: u32,
}
impl ak_efix_UploadResultDataMessage {
    pub const ZERO: Self = ak_efix_UploadResultDataMessage {
        upload: ak_efix_UploadResultData::ZERO,
        presence: 0,
    };
}
pub const AK_EFIX_UPLOADRESULTDATAMESSAGE_PRESENT_UPLOAD: u32 = 1 << 0;

/// Decode group for `UploadResultDataMessage`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_UploadResultDataMessage {
    pub upload: ak_dfix_UploadResultData,
    pub presence: u32,
}
impl ak_dfix_UploadResultDataMessage {
    pub const ZERO: Self = ak_dfix_UploadResultDataMessage {
        upload: ak_dfix_UploadResultData::ZERO,
        presence: 0,
    };
}
pub const AK_DFIX_UPLOADRESULTDATAMESSAGE_PRESENT_UPLOAD: u32 = 1 << 0;

/// Encode group for `DualResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_DualResponse {
    pub presence: u32,
}
impl ak_efix_DualResponse {
    pub const ZERO: Self = ak_efix_DualResponse {
        presence: 0,
    };
}

/// Decode group for `DualResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_DualResponse {
    pub presence: u32,
}
impl ak_dfix_DualResponse {
    pub const ZERO: Self = ak_dfix_DualResponse {
        presence: 0,
    };
}

/// Encode group for `ChunkLeaf`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ChunkLeaf {
    pub k: ak_str,
    pub v: i32,
    pub presence: u32,
}
impl ak_efix_ChunkLeaf {
    pub const ZERO: Self = ak_efix_ChunkLeaf {
        k: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        v: 0,
        presence: 0,
    };
}

/// Decode group for `ChunkLeaf`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ChunkLeaf {
    pub k: ak_span,
    pub v: i32,
    pub presence: u32,
}
impl ak_dfix_ChunkLeaf {
    pub const ZERO: Self = ak_dfix_ChunkLeaf {
        k: ak_span { off: 0, len: 0, coder: 0 },
        v: 0,
        presence: 0,
    };
}

/// Encode group for `ChunkInner`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ChunkInner {
    pub presence: u32,
}
impl ak_efix_ChunkInner {
    pub const ZERO: Self = ak_efix_ChunkInner {
        presence: 0,
    };
}

/// Decode group for `ChunkInner`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ChunkInner {
    pub presence: u32,
}
impl ak_dfix_ChunkInner {
    pub const ZERO: Self = ak_dfix_ChunkInner {
        presence: 0,
    };
}

/// Encode group for `ChunkElement`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ChunkElement {
    pub id: ak_str,
    pub inner: ak_efix_ChunkInner,
    pub presence: u32,
}
impl ak_efix_ChunkElement {
    pub const ZERO: Self = ak_efix_ChunkElement {
        id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        inner: ak_efix_ChunkInner::ZERO,
        presence: 0,
    };
}
pub const AK_EFIX_CHUNKELEMENT_PRESENT_INNER: u32 = 1 << 0;

/// Decode group for `ChunkElement`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ChunkElement {
    pub id: ak_span,
    pub inner: ak_dfix_ChunkInner,
    pub presence: u32,
}
impl ak_dfix_ChunkElement {
    pub const ZERO: Self = ak_dfix_ChunkElement {
        id: ak_span { off: 0, len: 0, coder: 0 },
        inner: ak_dfix_ChunkInner::ZERO,
        presence: 0,
    };
}
pub const AK_DFIX_CHUNKELEMENT_PRESENT_INNER: u32 = 1 << 0;

/// Encode group for `ChunkedResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ChunkedResponse {
    pub page: i32,
    pub presence: u32,
}
impl ak_efix_ChunkedResponse {
    pub const ZERO: Self = ak_efix_ChunkedResponse {
        page: 0,
        presence: 0,
    };
}

/// Decode group for `ChunkedResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ChunkedResponse {
    pub page: i32,
    pub presence: u32,
}
impl ak_dfix_ChunkedResponse {
    pub const ZERO: Self = ak_dfix_ChunkedResponse {
        page: 0,
        presence: 0,
    };
}

/// Encode group for `ChunkedResponseWide`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ChunkedResponseWide {
    pub presence: u32,
}
impl ak_efix_ChunkedResponseWide {
    pub const ZERO: Self = ak_efix_ChunkedResponseWide {
        presence: 0,
    };
}

/// Decode group for `ChunkedResponseWide`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ChunkedResponseWide {
    pub presence: u32,
}
impl ak_dfix_ChunkedResponseWide {
    pub const ZERO: Self = ak_dfix_ChunkedResponseWide {
        presence: 0,
    };
}

/// Encode group for `LeafElement`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_LeafElement {
    pub id: ak_str,
    pub n: i64,
    pub stamp: ak_efix_Timestamp,
    pub presence: u32,
}
impl ak_efix_LeafElement {
    pub const ZERO: Self = ak_efix_LeafElement {
        id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        n: 0,
        stamp: ak_efix_Timestamp::ZERO,
        presence: 0,
    };
}
pub const AK_EFIX_LEAFELEMENT_PRESENT_STAMP: u32 = 1 << 0;

/// Decode group for `LeafElement`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_LeafElement {
    pub id: ak_span,
    pub n: i64,
    pub stamp: ak_dfix_Timestamp,
    pub presence: u32,
}
impl ak_dfix_LeafElement {
    pub const ZERO: Self = ak_dfix_LeafElement {
        id: ak_span { off: 0, len: 0, coder: 0 },
        n: 0,
        stamp: ak_dfix_Timestamp::ZERO,
        presence: 0,
    };
}
pub const AK_DFIX_LEAFELEMENT_PRESENT_STAMP: u32 = 1 << 0;

/// Encode group for `LeafResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_LeafResponse {
    pub presence: u32,
}
impl ak_efix_LeafResponse {
    pub const ZERO: Self = ak_efix_LeafResponse {
        presence: 0,
    };
}

/// Decode group for `LeafResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_LeafResponse {
    pub presence: u32,
}
impl ak_dfix_LeafResponse {
    pub const ZERO: Self = ak_dfix_LeafResponse {
        presence: 0,
    };
}

/// Encode group for `Surrogate`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_Surrogate {
    pub text: ak_str,
    pub nested: ak_efix_SurrogateInner,
    pub raw: ak_str,
    pub presence: u32,
}
impl ak_efix_Surrogate {
    pub const ZERO: Self = ak_efix_Surrogate {
        text: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        nested: ak_efix_SurrogateInner::ZERO,
        raw: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}
pub const AK_EFIX_SURROGATE_PRESENT_NESTED: u32 = 1 << 0;

/// Decode group for `Surrogate`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_Surrogate {
    pub text: ak_span,
    pub nested: ak_dfix_SurrogateInner,
    pub raw: ak_span,
    pub presence: u32,
}
impl ak_dfix_Surrogate {
    pub const ZERO: Self = ak_dfix_Surrogate {
        text: ak_span { off: 0, len: 0, coder: 0 },
        nested: ak_dfix_SurrogateInner::ZERO,
        raw: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}
pub const AK_DFIX_SURROGATE_PRESENT_NESTED: u32 = 1 << 0;

/// Encode group for `SurrogateInner`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_SurrogateInner {
    pub text: ak_str,
    pub presence: u32,
}
impl ak_efix_SurrogateInner {
    pub const ZERO: Self = ak_efix_SurrogateInner {
        text: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}

/// Decode group for `SurrogateInner`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_SurrogateInner {
    pub text: ak_span,
    pub presence: u32,
}
impl ak_dfix_SurrogateInner {
    pub const ZERO: Self = ak_dfix_SurrogateInner {
        text: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}

/// Encode group for `WireZoo`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_WireZoo {
    pub v_int32: i32,
    pub v_int64: i64,
    pub v_bool: u8,
    pub v_double: f64,
    pub v_fixed32: u32,
    pub v_string: ak_str,
    pub v_bytes: ak_str,
    pub v_enum: i32,
    pub v_msg: ak_efix_Timestamp,
    pub v_big_tag: i32,
    pub presence: u32,
}
